--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "manager",
     "3"
   ],
-  "repository": "https://github.com/ValiyevAli/LamiyaBOT",
+  "repository": "https://github.com/Goqerti/LamiyaBOT",
   "env": {
     "ENV": {
       "description": "ANYTHING olaraq qalmağı tövsiyyə olunur",
